feat: add login, get profile, and edit profile
